# Dnd-Homeland

./: .gitignore  Cargo.toml  README.md  plan.md
config/: configuration.yaml
data/: class.json  dnd.db  name.json  race.json
db/: Cargo.toml  data_connection.rs  lib.rs  main.rs  traits.rs
db/data/: dnd.db
db/sql_structs/: class.rs  data_connection.rs  mod.rs
db/src/: lib.rs  main.rs
db/src/structs/: data_connection.rs  mod.rs
src/: class.rs  configuration.yaml  data_connection.rs  data_loader.rs  lib.rs  main.rs  profile.rs  race.rs  status.rs  traits.rs
