[package]
name = "dnd-cli"
version = "0.1.0"
authors = ["jsj1027 <jsj1027@g.rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.8.0", default-features = false, features = ['crossterm'] }
crossterm = "0.14.1"
